fixed images being too large in post list

--- a/source/theme/default/theme.css
+++ b/source/theme/default/theme.css
@@ -20,6 +20,9 @@
   padding: 1em;
   padding-bottom: 10%;
 }
+#postListArea img{
+  max-width: 100%;
+}
 
 .postPreview{
   text-align: left;
